--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
+    "glob": "^10.3.3",
+    "gray-matter": "^4.0.3",
     "next": "13.3.0",
+    "next-mdx-remote": "^4.4.1",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rehype": "^12.0.1",
+    "rehype-highlight": "^6.0.0",
+    "rehype-slug": "^5.1.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.3"
   }
