--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "rehype-slug": "^5.1.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
