--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "gray-matter": "^4.0.3",
     "next": "13.3.0",
     "next-mdx-remote": "^4.4.1",
+    "path": "^0.12.7",
+    "path-posix": "^1.0.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rehype": "^12.0.1",
     "rehype-highlight": "^6.0.0",
     "rehype-slug": "^5.1.0",
+    "stream": "^0.0.2",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.3"
   },
