--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "path-posix": "^1.0.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
+    "react-compare-image": "^3.4.0",
     "react-dom": "18.2.0",
     "rehype": "^12.0.1",
     "rehype-highlight": "^6.0.0",
