--- a/package.json
+++ b/package.json
@@ -1,38 +1,27 @@
 {
-  "name": "portfolio",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.16",
-    "@heroicons/react": "^2.0.18",
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.33",
-    "@types/react-dom": "18.0.11",
-    "autoprefixer": "10.4.14",
-    "glob": "^10.3.3",
+    "classnames": "^2.5.1",
+    "date-fns": "^3.3.1",
     "gray-matter": "^4.0.3",
-    "next": "13.3.0",
-    "next-mdx-remote": "^4.4.1",
-    "path": "^0.12.7",
-    "path-posix": "^1.0.0",
-    "postcss": "8.4.21",
-    "react": "18.2.0",
-    "react-compare-image": "^3.4.0",
-    "react-dom": "18.2.0",
-    "rehype": "^12.0.1",
-    "rehype-highlight": "^6.0.0",
-    "rehype-slug": "^5.1.0",
-    "stream": "^0.0.2",
-    "tailwindcss": "3.3.1",
-    "typescript": "5.0.3"
+    "next": "14.1.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
