--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@next/third-parties": "^14.2.3",
     "classnames": "^2.5.1",
     "date-fns": "^3.6.0",
+    "framer-motion": "^11.2.6",
     "gray-matter": "^4.0.3",
     "next": "14.1.0",
     "next-mdx-remote": "^5.0.0",
