--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "remark": "^15.0.1",
-    "remark-html": "^16.0.1"
+    "remark-html": "^16.0.1",
+    "simplex-noise": "^4.0.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
